# linkedin-api

./: .env.example  .flake8  .gitignore  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  LICENSE  Makefile  Pipfile  README.md  example.py  linkedin.ipynb  publish.sh  pyproject.toml  requirements.txt  scripts.py  setup.py  test.ipynb
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml  notify_on_pr.yml
docs/: .readthedocs.yaml  .readthedocs.yml  Makefile
docs/source/: api.rst  conf.py  examples.rst  index.rst  key_concepts.rst  usage.rst
docs/source/guides/: add-connection.rst  fetch-profile.rst  get-company.rst  get-conversations.rst  get-profile-contact.rst  get-profile-skills.rst  index.rst  search-jobs.rst  search-people.rst  send-messages.rst  track-profile-views.rst
examples/: basic.py  fetch_profile_example.py  search_groups.py  search_jobs_example.py
file_system/: __init__.py  downloader.py  finder.py  reader.py  utils.py  writer.py
linkedin_api/: __init__.py  advanced_linkedin.py  advanced_linkedin_api.py  client.py  cookie_repository.py  helo.py  linkedin.py  linkedin_api.py  linkedin_login.py  linkedin_login_copy.py  settings.py
linkedin_api/client/: __init__.py  client.py
linkedin_api/services/: company.py
linkedin_api/utils/: _base_linkedin.py  api_builder.py  dict.py  errors.py  function.py  header.py  helpers.py  log.py  parsers.py  query_options.py  response.py  schemas.py  settings.py  time.py  validate.py  value.py
tests/: test_cookie_repository.py  test_linkedin_api.py  test_linkedin_api_requests.py  test_linkedin_client.py
tests/e2e/: test_linkedin_api_requests.py  test_linkedin_client.py
tests/unit/: test_cookie_repository.py  test_linkedin_api.py
