[tool.poetry]
name = "linkedin_api"
version = "2.1.1"
description = "Python Wrapper for the Linkedin API"
authors = ["Tom Quirk <tomquirkacc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
httpx = "^0.27.0"
aiolimiter = "^1.1.0"
tenacity = "^8.4.2"
pydantic = "^2.8.2"
pydantic-extra-types = "^2.9.0"
pycountry = "^24.6.1"
email-validator = "^2.2.0"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
browser-cookie3 = "^0.19.1"
respx = "^0.21.1"
mypy = "^1.10.1"
ruff = "^0.5.1"
types-beautifulsoup4 = "^4.12.0.20240511"
pytest-asyncio = "^0.23.7"

[tool.ruff]
exclude = ["examples"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
